# IndexFundAdvisor

./: README.md
indexfunds/: README.md  pyproject.toml  requirements.txt
indexfunds/context/: retrieved_contexts1.md  retrieved_contexts2.md  retrieved_contexts3.md  retrieved_contexts4.md
indexfunds/src/: index_output.md  index_output1.md  index_output2.md  index_output3.md  index_output_1.md  index_output_2.md  index_output_3.md  index_output_4.md  index_output_api.md  output_macro_task.md  output_macro_task_yangbagus.md  output_news_task.md  output_research_task.md  output_teknikal.md  ragas_evaluation_template.ipynb  table_evaluation.csv  test_output_news.md
indexfunds/src/chroma_db/82ddf0ec-a0fd-469b-8c4a-4f81b0956405/: index_metadata.pickle
indexfunds/src/indexfunds/: api.py  crew.py  main.py  test_news.py  test_technical.py
indexfunds/src/indexfunds/config/: agents.yaml  tasks.yaml
indexfunds/src/indexfunds/static/: styles.css
indexfunds/src/indexfunds/templates/: index.html
indexfunds/src/indexfunds/tools/: custom_tool.py  news_tools.py
