[project]
name = "indexfunds"
version = "0.1.0"
description = "indexfunds using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "scrapegraph-py>=1.14.2",
]

[project.scripts]
indexfunds = "indexfunds.main:run"
run_crew = "indexfunds.main:run"
train = "indexfunds.main:train"
replay = "indexfunds.main:replay"
test = "indexfunds.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
